# evalcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LANDSCAPE.md  PRIVACY.md  README.md  SECURITY.md  SHIPPING.md  TERMS.md  llms.txt  pyproject.toml  v1-plugin-plan.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/comparisons/: vs-deepeval.md  vs-pytest-evals.md
evalcheck/: __init__.py  cli.py  decorator.py  judge.py  plugin.py  runtime.py  snapshot.py  types.py
evalcheck/metrics/: __init__.py  deterministic.py  judge_metrics.py
examples/: README.md  langchain_rag.ipynb  llamaindex_query_engine.ipynb  openai_judge_in_ci.ipynb
outreach/: dev-to-article.md  langchain-cookbook-pr.md  llamaindex-cookbook-pr.md  openai-cookbook-pr.md  show-hn.md
tests/: conftest.py  test_cli.py  test_decorator.py  test_eval_output.py  test_judge.py  test_judge_metrics.py  test_metrics.py  test_plugin_hooks.py  test_plugin_integration.py  test_runtime.py  test_snapshot.py
